# CudAkima

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  publish.yml
cudakima/: __init__.py  akima.py  cudakima.py
docs/: README.md
docs/source/: api.rst  conf.py  examples.rst  index.rst  tutorial.rst
docs/source/notebooks/: tutorial.ipynb
examples/: tutorial.ipynb
src/cudakima/: __init__.py  akima.py  cudakima.py  kernels.py
