[project]
name = "cudakima"
version = "0.1.1"
description = "GPU-accelerated, parallel implementation of Akima Splines"
authors = [
    { name = "Alessandro Santini", email = "alessandro.santini@aei.mpg.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "numba",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cudakima"]
