[project]
name = "cudakima"
version = "0.2.2"
description = "GPU-accelerated, parallel implementation of Akima Splines"
authors = [
    { name = "Alessandro Santini", email = "alessandro.santini@aei.mpg.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.3.5",
    "numba==0.63.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cudakima"]
