[project]
name = "cudakima"
version = "0.2.2"
description = "GPU-accelerated, parallel implementation of Akima Splines"
authors = [
    { name = "Alessandro Santini", email = "alessandro.santini@aei.mpg.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["akima", "spline", "interpolation", "GPU", "CUDA", "numba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=2.3.5",
    "numba>=0.63.1",
]

[project.urls]
Homepage = "https://github.com/asantini29/CudAkima"
Repository = "https://github.com/asantini29/CudAkima"
Documentation = "https://asantini29.github.io/CudAkima/"
"Bug Tracker" = "https://github.com/asantini29/CudAkima/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "nbsphinx>=0.9.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cudakima"]
